Ana Sayfa değişikliği yapıldı.

--- a/AtaSemOtomotiv/wwwroot/index.html
+++ b/AtaSemOtomotiv/wwwroot/index.html
@@ -22,13 +22,13 @@
 
     <!-- Enlemesine Logo -->
     <section class="banner">
-        <img src="images/logolar.webp" alt="Banner Logo">
+        <img src="images/Logo.png" alt="Banner Logo">
     </section>
 
     <!-- Yazı Alanı -->
     <section class="content">
         <p>
-            ATA-SEM Otomotiv sektördeki uzmanlığıyla sizlere kaliteli hizmet sunmak için çalışır. Güven, kalite ve müşteri memnuniyeti önceliğimizdir.
+            ATA-SEM Otomotiv olarak kurulduğumuz ilk günden itibaren güler yüzlü hizmet stratejisi izliyoruz. Her bir müşterimize aynı hassasiyet ve önem ile yaklaşıyoruz ve müşterilerimizin memnuniyetini birinci öncelik benimseyerek hızlı yedek parça tedariği sunuyoruz.
         </p>
     </section>
     <div class="whatsapp-full-button">
