Marka Logoları eklendi. Resposive tasarım yapıldı.

--- a/AtaSemOtomotiv/wwwroot/index.html
+++ b/AtaSemOtomotiv/wwwroot/index.html
@@ -21,8 +21,70 @@
     </nav>
 
     <!-- Enlemesine Logo -->
-    <section class="banner">
-        <img src="images/Logo.png" alt="Banner Logo">
+    <section class="brand-logos">
+        <center><h2>Tedarik Sağladığımız Markalar</h2></center>
+        <div class="brand-container">
+            <div class="brand-item">
+                <img src="images/audi.png" alt="Audi" />
+                <span class="brand-name">AUDI</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/citroen.png" alt="Citroen" />
+                <span class="brand-name">CITROEN</span>
+            </div>
+            <!-- Diğer markaları aynı şekilde ekleyin -->
+            <div class="brand-item">
+                <img src="images/dacia.png" alt="Dacia" />
+                <span class="brand-name">DACIA</span>
+            </div><div class="brand-item">
+                <img src="images/daihatsu.png" alt="Daihatsu" />
+                <span class="brand-name">DAIHATSU</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/honda.png" alt="Honda" />
+                <span class="brand-name">HONDA</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/hyundai.png" alt="Hyundai" />
+                <span class="brand-name">HYUNDAI</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/mazda.png" alt="Mazda" />
+                <span class="brand-name">MAZDA</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/nissan.png" alt="Nissan" />
+                <span class="brand-name">NISSAN</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/opel.png" alt="Opel" />
+                <span class="brand-name">OPEL</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/peugeot.png" alt="Peugeot" />
+                <span class="brand-name">PEUGEOT</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/renault.png" alt="Renault" />
+                <span class="brand-name">RENAULT</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/seat.png" alt="Seat" />
+                <span class="brand-name">SEAT</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/skoda.png" alt="Skoda" />
+                <span class="brand-name">SKODA</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/toyota.png" alt="Volkswagen" />
+                <span class="brand-name">TOYOTA</span>
+            </div>
+            <div class="brand-item">
+                <img src="images/volkswagen.png" alt="Volkswagen" />
+                <span class="brand-name">VOLKSWAGEN</span>
+            </div>
+        </div>
     </section>
 
     <!-- Yazı Alanı -->
