--- a/AtaSemOtomotiv/wwwroot/index.html
+++ b/AtaSemOtomotiv/wwwroot/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="logo"><img src="images/araba.jpg" alt="ATA_SEM" class="header-logo"/>ATA-SEM</a>  
             <ul class="nav-links">
                 <li><a href="#">Ana Sayfa</a></li>
-                <li><a href="#">Hakkımızda</a></li>
+                <li><a href="hakkimizda.html">Hakkımızda</a></li>
                 <li><a href="#">İletişim</a></li>
             </ul>
         </div>
