--- a/AtaSemOtomotiv/wwwroot/hakkimizda.html
+++ b/AtaSemOtomotiv/wwwroot/hakkimizda.html
@@ -18,7 +18,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="hakkimizda.html">Hakkımızda</a></li>
-            <li><a href="index.html#iletisim">İletişim</a></li>
+            <li><a href="/" onclick="navigateToContact(event)">İletişim</a></li>
         </ul>
     </div>
 </nav>
@@ -53,6 +53,8 @@
         <p>İletişim: <a href="mailto:info@atasemotomotiv.com">info@atasemotomotiv.com</a></p>
     </div>
 </footer>
+    
+
 
 </body>
 </html>
